<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#574B4B"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="50dp"
        android:textColor="@android:color/white"
        android:textSize="32dp"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_register"/>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@android:color/white"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/register_account"/>
        <EditText
            android:inputType="text"
            android:padding="20dp"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:id="@+id/ed_register_account"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/Prompt"
            android:textColorHint="@android:color/darker_gray"/>
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:background="#aaa"
        android:layout_width="320dp"
        android:layout_height="2dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@android:color/white"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/register_password"/>
        <EditText
            android:padding="20dp"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:id="@+id/ed_register_password"
            android:inputType="textPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/Prompt_passwrod"
            android:textColorHint="@android:color/darker_gray"/>
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:background="#7C7878"
        android:layout_width="320dp"
        android:layout_height="2dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@android:color/white"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/confirm_password"/>
        <EditText
            android:padding="20dp"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:id="@+id/ed_confirm_password"
            android:inputType="textPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/Prompt_passwrod"
            android:textColorHint="@android:color/darker_gray"/>
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:background="#7C7878"
        android:layout_width="320dp"
        android:layout_height="2dp" />
    <Button
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_register_user"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/login_style"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="24dp"
        android:textColor="@android:color/white"/>
</LinearLayout>