<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#574B4B"
    android:orientation="vertical">
    <TextView
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/welcome"
        android:textStyle="italic"
        android:textSize="70dp"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@android:color/white"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/account"/>
        <EditText
            android:inputType="text"
            android:padding="20dp"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:id="@+id/ed_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Prompt"
            android:textColorHint="@android:color/darker_gray"/>
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:background="#aaa"
        android:layout_width="320dp"
        android:layout_height="2dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@android:color/white"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/password"/>
        <EditText
            android:padding="20dp"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:id="@+id/ed_password"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Prompt_passwrod"
            android:textColorHint="@android:color/darker_gray"/>
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:background="#7C7878"
        android:layout_width="320dp"
        android:layout_height="2dp" />
    <LinearLayout
        android:layout_marginTop="5dp"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cb_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="15dp"
            android:textColor="@android:color/white"
            android:text="记住密码"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/login_style"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="24dp"
        android:textColor="@android:color/white"/>
    <Button
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_register"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/register_style"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="24dp"
        android:textColor="@android:color/white"/>
    <TextView
        android:textSize="17dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:id="@+id/login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forget_password"/>
    <TextView
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-或者你可以使用以下方式登录-"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="#FF27A22C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="近期期待"/>
    </LinearLayout>
</LinearLayout>